# bevy_mod_debugdump

./: Cargo.toml  README.md
docs/: generate_readme.sh  index.html
docs/render/dark/: render_graph.dot
docs/render/light/: render_graph.dot
docs/schedule/: README.md
docs/schedule/by-crate/: README.md
docs/schedule/dark/: render_schedule_ExtractSchedule.dot  render_schedule_Render.dot  schedule_AssetEvents.dot  schedule_First.dot  schedule_LoadAssets.dot  schedule_PostStartup.dot  schedule_PostUpdate.dot  schedule_PreUpdate.dot  schedule_Update.dot
docs/schedule/light/: render_schedule_ExtractSchedule.dot  render_schedule_Render.dot  schedule_AssetEvents.dot  schedule_First.dot  schedule_LoadAssets.dot  schedule_PostStartup.dot  schedule_PostUpdate.dot  schedule_PreUpdate.dot  schedule_Update.dot
examples/: generate_docs.rs  print_schedule_graph_filtered.rs
src/: lib.rs
src/schedule_graph/: mod.rs
