[package]
name = "bevy_mod_debugdump"
version = "0.7.0"
repository = "https://github.com/jakobhellermann/bevy_mod_debugdump"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Visualization tools for bevy"
keywords = ["bevy", "schedule", "visual", "render", "graph"]
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2021"
exclude = ["docs/*"]

[features]
default = ["render_graph"]
render_graph = ["bevy_render"]

[dependencies]
bevy_ecs = { git = "https://github.com/MetabuildDev/bevy", branch = "patched-0.10.1"}
bevy_app = { git = "https://github.com/MetabuildDev/bevy", branch = "patched-0.10.1"}
bevy_utils = { git = "https://github.com/MetabuildDev/bevy", branch = "patched-0.10.1"}
bevy_render = { git = "https://github.com/MetabuildDev/bevy", branch = "patched-0.10.1", optional = true }
pretty-type-name = "1.0"
petgraph = "0.6"
once_cell = "1.17"

[dev-dependencies]
bevy = { git = "https://github.com/MetabuildDev/bevy", branch = "patched-0.10.1"}

[[example]]
name = "print_render_graph"
required-features = ["render_graph"]
